@@ -28,7 +28,10 @@ Copyright_License {
 #include "Util/NonCopyable.hpp"
 #include "Util/Serial.hpp"
 #include "Terrain/TerrainSettings.hpp"
+
+#ifndef ENABLE_OPENGL
 #include "Projection/CompareProjection.hpp"
+#endif
 
 class Canvas;
 class WindowProjection;
@@ -43,7 +46,9 @@ class TerrainRenderer : private NonCopyable {
 protected:
   struct TerrainRendererSettings settings;
 
+#ifndef ENABLE_OPENGL
   CompareProjection compare_projection;
+#endif
 
   Angle last_sun_azimuth;
 
