@@ -6,6 +6,7 @@ Version 6.5 - not yet released
 * map
   - lower zoom levels possible while circling (#1120)
   - draw FAI triangle areas (#1563)
+  - optimise the terrain renderer
 * calculations
   - don't detect landing while climbing in a wave (#1330, #2289, #2406)
   - basic support for the contest "DMSt" (#2208)
